[package]
name = "candle"
version = "0.4.0"
authors = ["EdJoPaTo <git-commit-with-a-funny-long-email-address-everyone-hates-as-it-is-too-long@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8"
rumqttc = "0.5"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
